--- a/index.html
+++ b/index.html
@@ -76,8 +76,16 @@
                 <!-- ::: screens:: -->
                 <div class="c-screens">
                   <div class="c-screens__image" id="screen01">
-                    <img src="./assets/images/second_iphone.jpg" />
-                    <div class="top_image">
+                    <img
+                      src="./assets/images/second_iphone.jpg"
+                      data-aos="fade-up"
+                      data-aos-duration="4000"
+                    />
+                    <div
+                      class="top_image"
+                      data-aos="fade-up"
+                      data-aos-duration="1000"
+                    >
                       <img
                         src="./assets/images/ipad.png"
                         alt="ipad"
@@ -87,9 +95,17 @@
                     </div>
                   </div>
                   <div class="c-screens__image" id="screen02">
-                    <img src="./assets/images/iphone.jpg" />
+                    <img
+                      src="./assets/images/iphone.jpg"
+                      data-aos="fade-up"
+                      data-aos-duration="4000"
+                    />
 
-                    <div class="top_image">
+                    <div
+                      class="top_image"
+                      data-aos="fade-up"
+                      data-aos-duration="1000"
+                    >
                       <img
                         src="./assets/images/ipad.png"
                         alt="ipad"
@@ -102,7 +118,11 @@
                 <!-- ::: screens:: -->
 
                 <!-- ::content:: -->
-                <div class="c-content">
+                <div
+                  class="c-content"
+                  data-aos="fade-up"
+                  data-aos-duration="3000"
+                >
                   <div id="text01" class="c-content__text">
                     <h2>Easy, magical setup</h2>
                     <p>
